# rbac-core

./: .gitignore  README.md  pyproject.toml
examples/01_basic_rbac/: __init__.py  main.py
scripts/: setup_db.py  teardown_db.py
src/rbac_core/: __init__.py
src/rbac_core/adapters/policy_evaluators/: simple_evaluator.py
src/rbac_core/adapters/repositories/: memory.py  mongodb.py  sqlalchemy.py
src/rbac_core/domain/: exceptions.py  models.py  services.py  value_objects.py
src/rbac_core/dto/: requests.py  responses.py
src/rbac_core/events/: events.py
src/rbac_core/interfaces/: policy_evaluator.py  repository.py
tests/: conftest.py  test_repositories_all.py
tests/contracts/: test_role_repository_contract.py
tests/unit/domain/: test_models.py  test_value_objects.py
